--- a/TheBattleApi/TheBattleApi.csproj
+++ b/TheBattleApi/TheBattleApi.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -25,10 +25,6 @@
   <ItemGroup>
     <Folder Include="Examples\Responses\" />
     <Folder Include="Examples\Requests\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Logger\Logger.csproj" />
   </ItemGroup>
 
 </Project>
