--- a/TheBattleApi/TheBattleApi.csproj
+++ b/TheBattleApi/TheBattleApi.csproj
@@ -25,8 +25,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Data\Migrations\" />
     <Folder Include="Examples\Responses\" />
     <Folder Include="Examples\Requests\" />
   </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties properties_4servicedependencies_4thebattleshipapi_x0020_-_x0020_web_x0020_deploy_4mssql1_1arm_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 
 </Project>
